styling: Arranging the issue covers nicely
Mind the gap!
Also arranging the issues by issue number.

--- a/white-library-frontend/src/components/issuecard/issuecardlist.module.css
+++ b/white-library-frontend/src/components/issuecard/issuecardlist.module.css
@@ -1,3 +1,5 @@
 .issueCardListContainer {
   display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
 }
